[package]
name = "rust-eth-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"

# Mnemonic generation + seed
bip39 = "2.0"

# HD derivation (BIP32)
bip32 = "0.5"

# Ethereum wallet + signing
ethers = "2.0.14"

futures = "0.3"